# CK3-history-extractor

./: .gitattributes  .gitignore  CK3_history_extractor.py  CK3_lookup_gen.py  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.txt  build.rs  charTemplate.html  config.toml  cultureTemplate.html  dynastyTemplate.html  faithTemplate.html  homeTemplate.html  license.txt  trait_indexes.lookup
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lib.yml  publish.yml  rust.yml  static.yml  windows.yml
example/: 6391.html  home.html
example/characters/: 6391.html
example/cultures/: 100.html  101.html  102.html  103.html  104.html  105.html  11.html  116.html  117.html  118.html  119.html  122.html  126.html  130.html  16.html  17.html  175.html  177.html  178.html  18.html  186.html  192.html  195.html  20.html  203.html  219.html  22.html  220.html  223.html  237.html  239.html  24.html  243.html  246.html  247.html  248.html  249.html  251.html  253.html  262.html  (+25 more)
example/faiths/: 10.html  12.html  23.html  26.html  38.html  47.html  48.html  62.html  92.html
lib/: Cargo.toml  README.md  build.rs
lib/src/: derived_ref.rs  lib.rs  types.rs
lib/src/display/: graph.rs  renderer.rs  timeline.rs
lib/src/game_data/: loader.rs  localizer.rs  map.rs  mod.rs
lib/src/parser/: game_object.rs  game_state.rs  mod.rs  save_file.rs  section.rs  section_reader.rs
lib/src/save_file/: game_state.rs  mod.rs  process_section.rs  save_file.rs
lib/src/save_file/parser/: error.rs  game_object.rs  mod.rs  section.rs  section_reader.rs  types.rs
lib/src/save_file/structures/: artifact.rs  character.rs  culture.rs  dynasty.rs  faith.rs  house.rs  lineage.rs  memory.rs  mod.rs  player.rs  title.rs
lib/src/structures/: artifact.rs  character.rs  culture.rs  dynasty.rs  faith.rs  house.rs  lineage.rs  memory.rs  mod.rs  player.rs  title.rs
src/: CK3_history_extractor.py  args.rs  game_object.rs  game_state.rs  graph.rs  jinja_env.rs  localizer.rs  main.rs  map.rs  renderer.rs  save_file.rs  steam.rs  timeline.rs  tokens.rs  types.rs
src/display/: graph.rs  localizer.rs  map.rs  mod.rs  renderable_type.rs  renderer.rs  timeline.rs
src/game_data/: loader.rs  localizer.rs  map.rs  mod.rs
src/parser/: game_object.rs  game_state.rs  mod.rs  save_file.rs  section.rs  section_reader.rs  tokens.rs  types.rs
src/rust/: Cargo.toml
src/rust/src/: game_object.rs  game_state.rs  main.rs  renderer.rs  save_file.rs  structs.rs
src/rust/src/save_file/: game_objects.rs
src/rust/src/structures/: character.rs  culture.rs  dynasty.rs  faith.rs  memory.rs  mod.rs  player.rs  renderer.rs  title.rs
src/structures/: artifact.rs  character.rs  culture.rs  derived_ref.rs  dynasty.rs  faith.rs  house.rs  lineage.rs  memory.rs  mod.rs  player.rs  renderer.rs  title.rs
src/templates/: titleTemplate.html
templates/: README.md  base.html  charTemplate.html  cultureTemplate.html  dynastyTemplate.html  faithTemplate.html  homeTemplate.html  houseTemplate.html  refTemplate.html  timelineTemplate.html  titleTemplate.html
