[package]
name = "ck3_history_extractor"
version = "2.4.2"
edition = "2021"
authors = ["TCA"]
description = "A tool for generating a encyclopedia from your CK3 save file"
documentation = "https://tca166.github.io/CK3-history-extractor/ck3_history_extractor/"
readme = "./README.md"
homepage = "https://github.com/TCA166/CK3-history-extractor"
repository = "https://github.com/TCA166/CK3-history-extractor"
license = "MIT"
keywords = [
    "Crusader Kings 3",
    "CK3",
    "Paradox",
    "History",
    "Save",
    "Extractor",
    "Encyclopedia",
]
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
internal = []
permissive = []
tokens = []

[dependencies]
minijinja = { version = "2.10.2", features = ["loader"] }
serde = { version = "1.0.219", features = ["rc", "derive"] }
syn = "2.0.101"
quote = "1.0.40"
proc-macro2 = "1.0.95"
zip = "4.0.0"
image = "0.25.6"
csv = "1.3.1"
plotters = "0.3.7"
tidy-tree = "0.1.0"
serde_json = "1.0.140"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
open = "5.3.2"
rand = "0.9.1"
indicatif = "0.17.11"
keyvalues-parser = "0.2.0"
human-panic = "=2.0.3"
clap = "4.5.38"
clap_derive = "4.5.32"
jomini = "0.28.0"
derive_more = { version = "2.0.1", features = ["from", "display"] }
base64 = "0.22.1"
phf = "0.12.1"

[build-dependencies]
phf_codegen = "0.12.1"

[dev-dependencies]
tempfile = "3.20.0"
