[package]
name = "ck3_history_extractor_lib"
version = "0.1.0"
edition = "2021"
authors = ["TCA"]
description = "The ck3_history_extractor toolkit"
readme = "./README.md"
repository = "https://github.com/TCA166/CK3-history-extractor"
license = "MIT"
keywords = [
    "crusader-kings-3",
    "save-files",
    "visualiser",
    "extractor",
    "utility",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
permissive = []
tokens = []

[dependencies]
minijinja = { version = "2.12.0", features = ["loader"] }
serde = { version = "1.0.219", features = ["rc", "derive"] }
zip = "4.6.1"
image = "0.25.6"
csv = "1.3.1"
plotters = "0.3.7"
tidy-tree = "0.1.0"
rand = "0.9.1"
jomini = "0.28.0"
derive_more = { version = "2.0.1", features = ["from", "display"] }
base64 = "0.22.1"
phf = "0.13.1"


[dev-dependencies]
tempfile = "3.21.0"

[lib]
path = "src/lib.rs"
