[package]
name = "ck3_history_extractor_lib"
version = "0.2.0"
edition = "2021"
authors = ["TCA"]
description = "The ck3_history_extractor toolkit"
readme = "./README.md"
repository = "https://github.com/TCA166/CK3-history-extractor"
license = "MIT"
keywords = [
    "crusader-kings-3",
    "save-files",
    "visualiser",
    "extractor",
    "utility",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version = "2.12.0", features = ["loader"], optional = true }
serde = { version = "1.0.219", features = ["rc", "derive"], optional = true }
zip = "5.0.0"
image = "0.25.6"
csv = "1.3.1"
plotters = "0.3.7"
tidy-tree = "0.1.0"
rand = "0.9.1"
jomini = "0.29.0"
derive_more = { version = "2.0.1", features = ["from", "display", "error"] }
base64 = "0.22.1"

[features]
permissive = []
serde = ["dep:serde"]
display = ["serde", "dep:minijinja"]

[dev-dependencies]
tempfile = "3.21.0"

[lib]
path = "src/lib.rs"
